style.css
:root {
    --gray: rgb(231, 231, 231);
    --white: rgb(255, 255, 255);
    --nav-blue: rgb(71, 82, 94);
    --h-blue: rgb(74, 85, 97);
    --p-blue: rgb(135, 149, 169);
    --beige: rgb(228, 219, 205);
}

body {
    display: flex;
    flex-direction: column;
    min-height: 100vh;

    background-color: var(--white);
    font-family: "Source Sans Pro", sans-serif;
    margin: 0;
    padding: 0;
    color: var(--h-blue);
}

header {
    background-color: var(--gray);
    text-align: center;
    position: sticky;
    top: 0;
    width: 100%;
}

header h1 {
    font-family: "Playfair Display SC", serif;
    font-weight: bold;
    margin-top: 36px;
    font-size: 32px;
}

header nav {
    display: flex;
    justify-content: space-evenly;
    padding: 18px;
}

header nav a {
    font-family: "Source Sans Pro", sans-serif;
    text-decoration: none;
    color: var(--nav-blue);
    font-size: 22px;
    font-weight: bold;
}

footer {
    background-color: var(--gray);
    padding-top: 10px;
    margin: 15px;
    margin-top: auto;
    display: flex;
    justify-content: space-around;
}

footer p {
    font-size: 20px;
}

footer .email {
    text-align: center;
    font-weight: bold;
}

footer .documents {
    text-align: right;
}

/* Landing page */
.main {
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    gap: 80px;
    align-self: center;
    margin: 80px;
}

.main .text {
    width: 400px;
}

.main .text p {
    color: var(--p-blue);
    font-size: 20px;
}

.text h2 {
    font-weight: bold;
    font-size: 28px;
}

/* slideshow  */
.main .gallery .slide:not(:first-child) {
    display: none;
}

.main .gallery {
    position: relative;
}

.main .gallery img {
    width: 340px;
    height: 440px;
}

.main .gallery .prev,
.next {
    cursor: pointer;
    position: absolute;
    top: 86%;
    width: auto;
    padding: 16px;
    margin-top: -22px;
    color: rgb(87, 87, 87);
    font-weight: bold;
    font-size: 18px;
    transition: 0.6s ease;
    border-radius: 0 3px 3px 0;
    user-select: none;
}

.main .gallery .next {
    right: 0;
    border-radius: 3px 0 0 3px;
}

.main .gallery .dots {
    text-align: center;
    position: relative;
    bottom: 30px;
}

.main .gallery .dots .dot {
    cursor: pointer;
    height: 10px;
    width: 10px;
    background-color: rgb(167, 167, 167);
    border-radius: 50%;
    display: inline-block;
    transition: background-color 0.6s ease;
}

.main .gallery .dots .active,
.dot:hover {
    background-color: #717171;
}

/* Product page */
.product-container {
    display: flex;
    flex-direction: column;

    margin: 80px 0;
}

.product-row {
    display: flex;
    margin: 10px 150px;
    justify-content: space-around;
}

.product-row a {
    color: initial;
    text-decoration: initial;
}

.product {
    width: 400px;
    display: flex;
    flex-direction: column;
    justify-content: start;
}

.product-container .product-row .product img {
    width: 400px;
    height: 500px;
}

.product-container .product-row .product h3 {
    font-weight: lighter;
    font-size: 24px;
}

.product-container .product-row .product p {
    color: var(--p-blue);
    font-size: 18px;
    margin: -5px 0;
}

/* Price */
.price {
    display: flex;
    column-gap: 80px;
    margin: 80px 0;
    padding: 0 40px;
    align-self: center;
}

.price-product {
    display: flex;
    flex-direction: column;
    row-gap: 10px;
}

.price-product img {
    width: 300px;
}

.price input[type="email"] {
    border: 1px solid rgba(93, 93, 122, 0.616);
    width: 200px;
    height: 20px;
    padding: 10px;
    margin: 10px;
    border-radius: 4px;
    font-family: "Source Sans Pro", sans-serif;
    font-size: 18px;
    color: rgb(150, 150, 150);
}

.price input[type="tel"] {
    border: 1px solid rgba(93, 93, 122, 0.616);
    color: rgb(150, 150, 150);
    width: 200px;
    height: 20px;
    padding: 10px;
    margin: 10px;
    border-radius: 4px;
    font-family: "Source Sans Pro", sans-serif;
    font-size: 18px;
    color: rgb(150, 150, 150);
}

.price .price-product label {
    color: var(--p-blue);
}

textarea {
    width: 100%;
    border: 1px solid rgba(93, 93, 122, 0.616);
    color: rgb(150, 150, 150);
    font-family: "Source Sans Pro", sans-serif;
    font-size: 18px;
    padding: 10px;
    margin: 10px;
    border-radius: 4px;
}

button {
    background-color: var(--h-blue);
    border: none;
    text-decoration: none;
    margin: 0 10px;
    color: white;
    width: 200px;
    height: 50px;
    border-radius: 4px;
}

